fix body undesired scrollbar

--- a/src/index.less
+++ b/src/index.less
@@ -19,7 +19,6 @@ canvas {
 	width: 100%;
 	min-height: 50px;
 	padding-top: 5px;
-	padding-left: 5px;
 	position: absolute;
 	z-index: 1001;
 	bottom: 0px;
@@ -70,6 +69,7 @@ canvas {
 	.btn-toggle{
 		float: left;
 		margin-right: 20px;
+		margin-left: 5px;
 
 		.btn{
 			float: left;
